# sctp-clien-server

Client-Server/build-tcp_client-Desktop_Qt_6_5_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Client-Server/build-tcp_client-Desktop_Qt_6_5_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3c101b38dba81437d941.json  cmakeFiles-v1-5a506872d28d1436f8e2.json  codemodel-v2-3f5002d67140fcb59579.json  directory-.-Debug-8a4a825525e69516a829.json  index-2023-08-18T14-42-56-0806.json  target-tcp_client-Debug-f8218edb47483dcc811e.json
Client-Server/build-tcp_client-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Client-Server/build-tcp_server-Desktop_Qt_6_5_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Client-Server/build-tcp_server-Desktop_Qt_6_5_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f0113b41a9825cd28a89.json  cmakeFiles-v1-fd1db8721613e8a7a359.json  codemodel-v2-76bb4602c7bc4b364e55.json  directory-.-Debug-fd3fed6e0d8bc166adf7.json  index-2023-08-18T14-43-42-0499.json  target-tcp_server-Debug-c843a050dbbce47b0d32.json
Client-Server/build-tcp_server-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Client-Server/sctp_client/: CMakeLists.txt  main.cpp
Client-Server/sctp_server/: CMakeLists.txt  main.cpp
